hphp/hack/test/typecheck/reactive/rx_if_implements17.php.exp
File "rx_if_implements17.php", line 14, characters 5-9:
This object's property is being mutated(used as an lvalue)
You cannot set non-mutable object properties in reactive functions (Typing[4202])
